# Bedrock-server-manager

./: .gitignore  .gitignore.txt  .wakatime-project  LICENSE  README.md  backup.py  boot_scripts.code-workspace  check_ha_switch.py  clear_backup.py  ddns_update.py  load_config.py  main.py  minecraft_updater.py  pyproject.toml  requirements.txt  server_status.py  setup.sh
msm/config/: configuration.py  load_config.py  setup.py
msm/core/: backup.py  clear_backup.py  minecraft_updater.py
msm/services/: check_ha.py  check_ha_switch.py  ddns_update.py  server_status.py
tests/: dotenvtest.py  question test.py
