[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-server-manager"
version = "0.1.0"
description = "CHANGE LATER"
authors = [
    {name = "Djayden-R"}
]
license = "MIT"  # Changed from table format to simple string
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcstatus",
    "GitPython",
    "urllib3",
    "psutil",
    "python-dotenv",
    "requests",
    "PyYAML",
    "questionary",
    "PyGithub"
]

[tool.setuptools.packages.find]
# Only include the main msm package
include = ["msm*"]
exclude = ["bedrock_connector*", "minecraft_updater*"]

[tool.setuptools.package-dir]
# If you want to keep the current structure
"" = "."