[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-server-manager"
version = "0.1.0"
description = "Bedrock server manager with backup, updating, DNS, and Home Assistant integration"
authors = [
    {name = "Djayden-R"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "mcstatus>=11.0.0",
    "GitPython>=3.1.0",
    "urllib3>=2.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "questionary>=2.0.0"
]

[project.scripts]
bedrock-server-manager = "main:main"

[tool.setuptools.packages.find]
include = ["msm*"]
exclude = ["console_bridge*", "minecraft_updater*", "tests*"]

[tool.setuptools.package-dir]
"" = "."

